--- a/assets/styles/scss/abstracts/mixins/_utilities.scss
+++ b/assets/styles/scss/abstracts/mixins/_utilities.scss
@@ -36,3 +36,11 @@
   flex-grow: 1;
   flex-shrink: 0;
 }
+
+@mixin overflow {
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  /* Required for text-overflow to do anything */
+  white-space: nowrap;
+}
