--- a/assets/styles/scss/base/_b-sectioning.scss
+++ b/assets/styles/scss/base/_b-sectioning.scss
@@ -28,6 +28,10 @@ section {
   @include breakpoint(l) {
     padding: $buffer--l;
   }
+
+  @include breakpoint(xl) {
+    // padding: $buffer--xl 0;
+  }
 }
 
 // #  <---------------| <aside> |--------------->
