--- a/assets/styles/scss/abstracts/mixins/components/_c-main-footer.scss
+++ b/assets/styles/scss/abstracts/mixins/components/_c-main-footer.scss
@@ -3,7 +3,7 @@
 \* -------------------------------------------------------------------------- */
 
 // -  <---------------| Main-Footer |--------------->
-@mixin main-footer {
+@mixin c-main-footer {
   .main-footer {
     // ...
 
