--- a/assets/styles/scss/abstracts/mixins/_containers.scss
+++ b/assets/styles/scss/abstracts/mixins/_containers.scss
@@ -122,6 +122,11 @@
 
 // *  <<--------------------<< CLASSES >>-------------------->>
 
+// -  <---------------| .root |--------------->
+.root {
+  @include box-dimensions($width: 100%, $max-width: 100vw);
+}
+
 // -  <---------------| .main__container |--------------->
 .main__container > section {
   min-height: 100vh;
