--- a/assets/styles/scss/base/_b-sectioning.scss
+++ b/assets/styles/scss/base/_b-sectioning.scss
@@ -21,7 +21,8 @@ article {
 
 // #  <---------------| <section> |--------------->
 section {
-  @include box-dimensions(m, $max-width: $max-width--root, $margin: $center-me);
+  // @include box-dimensions(m, $max-width: $max-width--root, $margin: $center-me);
+  @include box-dimensions(m, $margin: $center-me);
 
   min-height: 100vh;
 
@@ -40,37 +41,72 @@ aside {
 }
 
 /* -------------------------------------------------------------------------- *\
--  <<--------------------<< SUB >>-------------------->>
-\* -------------------------------------------------------------------------- */
-
-// #  <---------------| <header> |--------------->
-header {
-  @include box-dimensions(m, $max-width: $max-width--root, $margin: $center-me);
-
-  @include breakpoint(l) {
-    padding: $buffer--l;
-  }
-}
-
-// #  <---------------| <footer> |--------------->
-footer {
-  @include box-dimensions(m, $max-width: $max-width--root, $margin: $center-me);
-
-  @include breakpoint(l) {
-    padding: $buffer--l;
-  }
-}
-
-// #  <---------------| <main> |--------------->
-main {
-  @include box-dimensions($max-width: $max-width--root, $margin: $center-me);
-}
-
-/* -------------------------------------------------------------------------- *\
 // -  <<--------------------<< NON-SEMANTIC  >>-------------------->>
 \* -------------------------------------------------------------------------- */
 
 // #  <---------------| <div> |--------------->
 div {
   @include box-dimensions;
+}
+
+/* -------------------------------------------------------------------------- *\
+-  <<--------------------<< SUB >>-------------------->>
+\* -------------------------------------------------------------------------- */
+
+// #  <---------------| <header> |--------------->
+header {
+  @include box-dimensions(m, $max-width: 100vw);
+
+  background-color: var(--color-primary);
+
+  @include breakpoint(l) {
+    padding: $buffer--l;
+  }
+
+  > div {
+    @include box-dimensions(
+      s,
+      $max-width: $max-width--root,
+      $margin: $center-me
+    );
+  }
+}
+
+// #  <---------------| <footer> |--------------->
+footer {
+  @include box-dimensions(m, $max-width: 100vw);
+
+  background-color: var(--color-primary);
+
+  @include breakpoint(l) {
+    padding: $buffer--l;
+  }
+
+  > div {
+    @include box-dimensions(
+      s,
+      $max-width: $max-width--root,
+      $margin: $center-me
+    );
+  }
+}
+
+// #  <---------------| <main> |--------------->
+main {
+  @include box-dimensions(m, $max-width: 100vw);
+
+  // background-color: var(--color-background);
+  background-color: rgb(6, 204, 6);
+
+  @include breakpoint(l) {
+    padding: $buffer--l;
+  }
+
+  > div {
+    @include box-dimensions(
+      s,
+      $max-width: $max-width--root,
+      $margin: $center-me
+    );
+  }
 }
