--- a/assets/styles/scss/abstracts/variables/_variables--v2.scss
+++ b/assets/styles/scss/abstracts/variables/_variables--v2.scss
@@ -280,5 +280,6 @@ $card--aspect-ratio: 9 / 16;
 
 // *  <<--------------------<< Transitions >>-------------------->>
 $transition--default: all 0.35s ease;
+$transition--transform: transform 0.35s ease;
 
 // *  <<--------------------<< Other >>-------------------->>
