--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -338,19 +338,14 @@ article {
 section {
   width: 100%;
   margin: 0 auto;
-  padding: 1rem;
+  padding: 0.5rem;
   min-height: 100vh;
-}
-
-@media (min-width: 1600px) {
-  section {
-    padding: 2rem;
-  }
+  background-color: #b6a736;
 }
 
 aside {
   width: 100%;
-  padding: 1rem;
+  padding: 0.5rem;
 }
 
 @media (min-width: 1600px) {
